--- a/projectlibraries.properties
+++ b/projectlibraries.properties
@@ -1,5 +1,4 @@
 # To override values defined in this file create projectlibraries.overrides.properties and put overridden values there.
-mbeddr.plattform=$PROJECT_DIR$/build/artifacts/com.mbeddr.platform
-mbeddr.sl-all=$PROJECT_DIR$/build/artifacts/com.mbeddr.allScripts.build
-iets3.os=$PROJECT_DIR$/build/artifacts/org.iets3.opensource
-iets3.os.scripts-all=$PROJECT_DIR$/build/artifacts/org.iets3.opensource.allScripts.build
+mbeddr.platform=$PROJECT_DIR$/../build/artifacts/com.mbeddr.platform
+mbeddr=$PROJECT_DIR$/../build/artifacts/mbeddr
+mbeddr.sl-all=$PROJECT_DIR$/../build/artifacts/com.mbeddr.allScripts.build
